--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "framer-motion": "^12.23.24",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-icon": "^1.0.0",
+    "react-router-dom": "^7.9.5",
     "yup": "^1.7.1"
   },
   "devDependencies": {
